--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -480,8 +480,8 @@ footer.sticky-bottom {
       border-color: var(--global-divider-color);
 
       .badge {
-        color: var(--global-card-bg-color) !important;
-        background-color: var(--global-theme-color) !important;
+        color: var(--global-text-color) !important;
+        background-color: var(--global-bg-color) !important;
       }
     }
   }
