hid the icon location in CV

--- a/_sass/_cv.scss
+++ b/_sass/_cv.scss
@@ -45,6 +45,7 @@ p.location {
 i.iconlocation {
   color: var(--global-theme-color);
   font-size: 0.6rem;
+  display: none;
 }
 
 i.iconinstitution {
