--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -59,12 +59,13 @@ layout: default
     <!-- Selected papers -->
     {% if page.selected_papers %}
       <h2>
-        <a href="{{ '/publications/' | relative_url }}" style="color: inherit">Selected publications</a>
+        <a href="{{ '/publications/' | relative_url }}" style="color: inherit">Publications</a>
       </h2>
       {% include selected_papers.liquid %}
     {% endif %}
 
     <!-- Social -->
+    <h2>Contact & Links</h2>
     {% if page.social %}
       <div class="social">
         <div class="contact-icons">{% include social.liquid %}</div>
