--- a/_includes/resume/awards.liquid
+++ b/_includes/resume/awards.liquid
@@ -2,16 +2,13 @@
   {% for content in data[1] %}
     <li class="list-group-item">
       <div class="row">
-        <div class="col-xs-2 cl-sm-2 col-md-2 text-center date-column">
-          {% if content.date %} {% assign date = content.date | split: '-' | join: '.' %} {% else %} {% assign date = '' %} {% endif %}
-          <span class="badge font-weight-bold danger-color-dark text-uppercase align-middle" style="min-width: 75px"> {{ date }} </span>
-        </div>
-        <div class="col-xs-10 cl-sm-10 col-md-10 mt-2 mt-md-0">
-          <h6 class="title font-weight-bold ml-1 ml-md-4">
-            <a href="{{ content.url }}">{{ content.title }}</a>
+        <div class="col-xs-12 cl-sm-12 col-md-12 mt-2 mt-md-0" style="padding-left: 0;">
+          <h6 class="title font-weight-bold ml-2">
+            {{ content.title }}
           </h6>
-          <h6 class="ml-1 ml-md-4" style="font-size: 0.95rem">{{ content.awarder }}</h6>
-          <h6 class="ml-1 ml-md-4" style="font-size: 0.95rem; font-style: italic">{{ content.summary }}</h6>
+          <h6 class="ml-2">{{ content.awarder }} · {{ content.date }}</h6>
+          <h6 class="ml-2" style="font-size: 0.95rem;">{{ content.summary }}</h6>
+          <h6 class="ml-2" style="font-size: 0.95rem; font-style: italic"><a href="{{ content.url }}">{{ content.url }}</a></h6>
         </div>
       </div>
     </li>
