--- a/_includes/resume/languages.liquid
+++ b/_includes/resume/languages.liquid
@@ -1,31 +1,14 @@
-<div class="list-groups">
+<ul class="card-text font-weight-light list-group list-group-flush">
   {% for content in data[1] %}
-    <div class="list-group col-md-6">
-      <table class="table-cv list-group-table">
-        <tbody>
-          <tr>
-            {% if content.icon %}
-              <td class="list-group-category-icon">
-                <i class="{{ content.icon }}"></i>
-              </td>
-            {% else %}
-              <td class="list-group-category-icon"></td>
-            {% endif %}
-            <!-- Calculate colspan number for category title -->
-            {% assign i = 1 %}
-            {% for item in content.items %}
-              {% assign i = i | plus: 1 %}
-            {% endfor %}
-            <td colspan="{{ i }}" class="list-group-category">{{ content.language }}</td>
-          </tr>
-          <tr>
-            <td></td>
-            <td class="list-group-name">
-              <b>{{ content.fluency }}</b>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
+    <li class="list-group-item">
+      <div class="row">
+        <div class="col-xs-12 cl-sm-12 col-md-12 mt-2 mt-md-0" style="padding-left: 0;">
+          <h6 class="title font-weight-bold ml-2">
+            {{ content.language }}
+          </h6>
+          <h6 class="ml-2" style="font-size: 0.95rem;">{{ content.fluency }}</h6>
+        </div>
+      </div>
+    </li>
   {% endfor %}
-</div>
+</ul>
