--- a/_includes/resume/work.liquid
+++ b/_includes/resume/work.liquid
@@ -1,47 +1,48 @@
 <ul class="card-text font-weight-light list-group list-group-flush">
-  {% assign work = data[1] | sort: 'startDate' | reverse %}
+  {% assign work = data[1] %}
   {% for content in work %}
+    {% if content.startDate %}
+      {% assign startDate = content.startDate | split: '-' | slice: 0, 2 | join: '.' %}
+      {% assign endDate = content.endDate | split: '-' | slice: 0, 2 | join: '.' | default: 'Present' %}
+      {% assign date = startDate | append: ' - ' %}
+      {% assign date = date | append: endDate %}
+    {% else %}
+      {% assign date = '' %}
+    {% endif %}
     <li class="list-group-item">
       <div class="row">
-        <div class="col-xs-2 cl-sm-2 col-md-2 text-center date-column">
-          {% if content.startDate %}
-            {% assign startDate = content.startDate | split: '-' | slice: 0, 2 | join: '.' %}
-            {% assign endDate = content.endDate | split: '-' | slice: 0, 2 | join: '.' | default: 'Present' %}
-            {% assign date = startDate | append: ' - ' %}
-            {% assign date = date | append: endDate %}
-          {% else %}
-            {% assign date = '' %}
-          {% endif %}
-          <table class="table-cv">
-            <tbody>
-              <tr>
-                <td>
-                  <span class="badge font-weight-bold danger-color-dark text-uppercase align-middle" style="min-width: 75px"> {{ date }} </span>
-                </td>
-              </tr>
-              {% if content.location %}
-                <tr>
-                  <td>
-                    <p class="location">
-                      <i class="fa-solid fa-location-dot iconlocation"></i>
-                      {{ content.location }}
-                    </p>
-                  </td>
-                </tr>
+        <div class="col-md-1" style="padding-right: 0; padding-left: 5px;">
+              {% if content.logo %}
+                    <img src="{{ content.logo | prepend: 'assets/img/cv_logos/' | relative_url }}" style="object-fit: cover; width: 98%; max-width: 70px; float: left; border-radius: 10%;" alt="organisation logo">
               {% endif %}
-            </tbody>
-          </table>
         </div>
-        <div class="col-xs-10 cl-sm-10 col-md-10 mt-2 mt-md-0">
+        <div class="col-xs-11 col-sm-11 col-md-11 mt-2 mt-md-0" style="padding-left: 0;">
           <h6 class="title font-weight-bold ml-1 ml-md-4">
-            <a href="{{ content.url }}">{{ content.position }}</a>
+            {{ content.position }}
           </h6>
-          <h6 class="ml-1 ml-md-4" style="font-size: 0.95rem">{{ content.name }}</h6>
-          <h6 class="ml-1 ml-md-4" style="font-size: 0.95rem; font-style: italic">{{ content.summary }}</h6>
+          <h6 class="ml-1 ml-md-4" style="font-size: 1rem">
+            {{ content.name }}
+          </h6>
+          <h6 class="ml-1 ml-md-4" style="font-size: 0.95rem">
+            {{ date }} {% if content.duration %}<i> · {{ content.duration }}</i>{% endif %} {% if content.type %}<i> · {{ content.type }}</i>{% endif %}
+          </h6>
+          {% if content.location %}
+            <h6 class="ml-1 ml-md-4" style="font-size: 0.95rem">
+              {{ content.location }}
+            </h6>
+          {% endif %}
+          <h6 class="ml-1 ml-md-4" style="font-size: 0.95rem;">
+            {{ content.summary }}
+          </h6>
+          {% if content.url %}
+          <h6 class="ml-1 ml-md-4" style="font-size: 0.95rem; font-style: italic;">
+            <a href="{{ content.url }}">{{ content.url }}</a>
+          </h6>
+          {% endif %}
           <ul class="items">
             {% for item in content.highlights %}
               <li>
-                <span class="item">{{ item }}</span>
+                <span class="item" style="font-size: 0.95rem;">{{ item }}</span>
               </li>
             {% endfor %}
           </ul>
