--- a/_includes/resume/skills.liquid
+++ b/_includes/resume/skills.liquid
@@ -1,33 +1,18 @@
-<div class="list-groups">
+<ul class="card-text font-weight-light list-group list-group-flush">
   {% for content in data[1] %}
-    <div class="list-group col-md-6" title="{{ content.level }}">
-      <table class="table-cv list-group-table">
-        <tbody>
-          <tr>
-            {% if content.icon %}
-              <td class="list-group-category-icon">
-                <i class="{{ content.icon }}"></i>
-              </td>
-            {% else %}
-              <td class="list-group-category-icon"></td>
-            {% endif %}
-            <!-- Calculate colspan number for category title -->
-            {% assign i = 1 %}
-            {% for item in content.items %}
-              {% assign i = i | plus: 1 %}
+    <li class="list-group-item">
+      <div class="row">
+        <div class="col-xs-12 cl-sm-12 col-md-12 mt-2 mt-md-0" style="padding-left: 0;">
+          <h6 class="title font-weight-bold ml-2">
+            {{ content.name }}
+          </h6>
+          <h6 class="ml-2" style="font-size: 0.95rem">
+            {% for item in content.keywords %}
+              {{ item }}{% if forloop.index < forloop.length %}, {% endif %}
             {% endfor %}
-            <td colspan="{{ i }}" class="list-group-category">{{ content.name }}</td>
-          </tr>
-          {% for item in content.keywords %}
-            <tr>
-              <td></td>
-              <td class="list-group-name">
-                <b>{{ item }}</b>
-              </td>
-            </tr>
-          {% endfor %}
-        </tbody>
-      </table>
-    </div>
+          </h6>
+        </div>
+      </div>
+    </li>
   {% endfor %}
-</div>
+</ul>
