--- a/_includes/resume/volunteer.liquid
+++ b/_includes/resume/volunteer.liquid
@@ -7,12 +7,14 @@
           <h6 class="title font-weight-bold ml-2">
             {{ content.organization }}
           </h6>
-          <h6 class="ml-2" style="font-size: 0.95rem">{{ content.position }} · {{ content.date }}</h6>
-          {% if content.location %}
-            <h6 class="ml-2" style="font-size: 0.95rem;">
-                  <i>{{ content.location }}</i>
-            </h6>
-          {% endif %}
+          <h6 class="ml-2" style="font-size: 0.95rem">
+            {{ content.position }} · {{ content.date }}
+          </h6>
+          <h6 class="ml-2" style="font-size: 0.95rem;">
+            {% if content.location and content.location != "" %}<i>{{ content.location }}</i> {% endif %}
+            {% if content.location != "" and content.url != "" %} · {% endif %}
+            {% if content.url and content.url != "" %} <i><a href="{{ content.url }}">Read more</a>{% endif %}</i>
+          </h6>
           <h6 class="ml-2" style="font-size: 0.95rem; font-style: italic">{{ content.summary }}</h6>
           <ul class="items">
             {% for item in content.highlights %}
