--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -51,7 +51,7 @@ layout: default
     <!-- Latest posts -->
     {% if site.latest_posts.enabled %}
       <h2>
-        <a href="{{ '/blog/' | relative_url }}" style="color: inherit">Recent News</a>
+        <a href="{{ '/news/' | relative_url }}" style="color: inherit">Recent News</a>
       </h2>
       {% include latest_posts.liquid %}
     {% endif %}
