added relative URLs for custom links in the CV

--- a/_includes/resume/volunteer.liquid
+++ b/_includes/resume/volunteer.liquid
@@ -13,7 +13,13 @@
           <h6 class="ml-2" style="font-size: 0.95rem;">
             {% if content.location and content.location != "" %}<i>{{ content.location }}</i>{% endif %}
             {% if content.location != "" and content.url != "" %} · {% endif %}
-            {% if content.url and content.url != "" %}<i><a href="{{ content.url }}">Read more</a></i>{% endif %}
+            {% if content.url and content.url != "" %}
+              {% if content.url contains '://' %}
+                <i><a href="{{ content.url }}">Read more</a></i>
+              {% else %}
+                <i><a href="{{ content.url | prepend: '/' | prepend: content.date | prepend: '/news/' | prepend: site.baseurl }}">Read more</a></i>
+              {% endif %}
+            {% endif %}
           </h6>
           <h6 class="ml-2" style="font-size: 0.95rem; font-style: italic">{{ content.summary }}</h6>
           <ul class="items">
