made the relative URLs for custom links more precise and less autoamted both in bibliography and CV

--- a/_includes/resume/volunteer.liquid
+++ b/_includes/resume/volunteer.liquid
@@ -17,7 +17,7 @@
               {% if content.url contains '://' %}
                 <i><a href="{{ content.url }}">Read more</a></i>
               {% else %}
-                <i><a href="{{ content.url | prepend: '/' | prepend: content.date | prepend: '/news/' | prepend: site.baseurl }}">Read more</a></i>
+                <i><a href="{{ content.url | prepend: '/' | prepend: site.baseurl }}">Read more</a></i>
               {% endif %}
             {% endif %}
           </h6>
