--- a/_layouts/bib.liquid
+++ b/_layouts/bib.liquid
@@ -231,7 +231,7 @@
         {% if entry.blog contains '://' %}
           <a href="{{ entry.blog }}" class="btn btn-sm z-depth-0" role="button">Blog</a>
         {% else %}
-          <a href="{{ entry.blog | prepend: '/' | prepend: entry.year | prepend: '/news/' | prepend: site.baseurl }}" class="btn btn-sm z-depth-0" role="button">Blog</a>
+          <a href="{{ entry.blog | prepend: '/' | prepend: site.baseurl }}" class="btn btn-sm z-depth-0" role="button">Blog</a>
         {% endif %}
       {% endif %}
       {% if entry.code %}
