redesigned the reviewer tasks in CV

--- a/_layouts/cv.liquid
+++ b/_layouts/cv.liquid
@@ -87,7 +87,7 @@ layout: default
                   {% include resume/education.liquid %}
                 {% when 'experience' %}
                   {% include resume/work.liquid %}
-                {% when 'reviewing' %}
+                {% when 'reviewer' %}
                   {% include resume/volunteer.liquid %}
                 {% when 'organization' %}
                   {% include resume/volunteer.liquid %}
