--- a/_includes/resume/skills.liquid
+++ b/_includes/resume/skills.liquid
@@ -8,7 +8,8 @@
           </h6>
           <h6 class="ml-2" style="font-size: 0.95rem">
             {% for item in content.keywords %}
-              {{ item }}{% if forloop.index < forloop.length %}, {% endif %}
+              {{ item -}}
+              {%- if forloop.index < forloop.length %}, {% endif %}
             {% endfor %}
           </h6>
         </div>
